Split doc testing to enable dependent projects
- make classes and methods public or protected
- move model persistence doc tests to private project
- move AppendixAProcedureListingTest to proc-ee test scope

The resolving of asciidoc source path is done with an assumption of an
asciidoc directory in the project structure.
This commit works around that by creating an empty such directory to
allow a path to resolve through it.