@@ -20,18 +20,23 @@
 package org.neo4j.gds.doc;
 
 import org.neo4j.gds.catalog.GraphCreateProc;
+import org.neo4j.gds.functions.AsNodeFunc;
 import org.neo4j.gds.paths.sourcetarget.ShortestPathDijkstraMutateProc;
 import org.neo4j.gds.paths.sourcetarget.ShortestPathDijkstraStreamProc;
 import org.neo4j.gds.paths.sourcetarget.ShortestPathDijkstraWriteProc;
 
-import java.util.Arrays;
 import java.util.List;
 
 class DijkstraSourceTargetDocTest extends DocTestBase {
 
     @Override
-    List<Class<?>> procedures() {
-        return Arrays.asList(
+    List<Class<?>> functions() {
+        return List.of(AsNodeFunc.class);
+    }
+
+    @Override
+    protected List<Class<?>> procedures() {
+        return List.of(
             ShortestPathDijkstraStreamProc.class,
             ShortestPathDijkstraWriteProc.class,
             ShortestPathDijkstraMutateProc.class,
@@ -40,7 +45,7 @@ class DijkstraSourceTargetDocTest extends DocTestBase {
     }
 
     @Override
-    String adocFile() {
+    protected String adocFile() {
         return "algorithms/shortest-path/dijkstra-source-target.adoc";
     }
 
