@@ -20,18 +20,23 @@
 package org.neo4j.gds.doc;
 
 import org.neo4j.gds.catalog.GraphCreateProc;
+import org.neo4j.gds.functions.AsNodeFunc;
 import org.neo4j.gds.paths.sourcetarget.ShortestPathYensMutateProc;
 import org.neo4j.gds.paths.sourcetarget.ShortestPathYensStreamProc;
 import org.neo4j.gds.paths.sourcetarget.ShortestPathYensWriteProc;
 
-import java.util.Arrays;
 import java.util.List;
 
 class YensDocTest extends DocTestBase {
 
     @Override
-    List<Class<?>> procedures() {
-        return Arrays.asList(
+    List<Class<?>> functions() {
+        return List.of(AsNodeFunc.class);
+    }
+
+    @Override
+    protected List<Class<?>> procedures() {
+        return List.of(
             ShortestPathYensStreamProc.class,
             ShortestPathYensWriteProc.class,
             ShortestPathYensMutateProc.class,
@@ -40,7 +45,7 @@ class YensDocTest extends DocTestBase {
     }
 
     @Override
-    String adocFile() {
+    protected String adocFile() {
         return "algorithms/shortest-path/yens.adoc";
     }
 
